# zmk-config_helloword_hw-75

./: .gitignore  GITHUB_OUTPUT  LICENSE  README.md  build.yaml  build_dynamic.yaml
.github/: RELEASE_TEMPLATE.md
.github/workflows/: build.yml  build_dynamic.yml
config/: CMakeLists.txt  Kconfig  hw75.keymap  hw75_dynamic.keymap  hw75_keyboard.keymap  west.yml  xikii_hw75.keymap
config/app/: CMakeLists.txt  Kconfig  Kconfig.hid_mouse  Kconfig.indicator  hid_mouse.c  indicator.c  storage_init.c
config/app/behaviors/: behavior_lvgl_key_press.c  behavior_mouse_wheel.c  behavior_sensor_rotate_mouse_wheel.c
config/app/include/app/: hid_mouse.h  indicator.h
config/app/usb_comm/: CMakeLists.txt  Kconfig  usb_comm.c  usb_comm_bos.c  usb_comm_handler.ld  usb_comm_hid.c  usb_comm_hid.h  usb_comm_proto.c
config/app/usb_comm/handler/: CMakeLists.txt  handler.h  handler_eink.c  handler_knob.c  handler_rgb.c  handler_version.c
config/boards/arm/hw75/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  README.md  board.cmake  hw75.dts  hw75.yaml  hw75.zmk.yml  hw75_1_2_0.overlay  hw75_defconfig  revision.cmake
config/boards/arm/hw75_dynamic/: README.md  (+16 more)
config/boards/arm/hw75_dynamic/app/screen/: CMakeLists.txt  Kconfig  icons.csv  knob_indicator.c  knob_indicator.h  knob_status.c  knob_status.h  layer_status.c  layer_status.h  status_screen.c  strings.csv
config/boards/arm/hw75_dynamic/app/screen/fonts/: CMakeLists.txt
config/boards/arm/hw75_dynamic/app/screen/fonts/mono_19/: CMakeLists.txt
config/boards/arm/hw75_dynamic/app/screen/fonts/zfull_9/: CMakeLists.txt
config/boards/arm/hw75_dynamic/app/usb_comm/: CMakeLists.txt  Kconfig  usb_comm.c  usb_comm.proto  usb_comm_proto.c  usb_comm_proto.h  usb_comm_webusb.c  usb_comm_webusb.h
config/boards/arm/hw75_dynamic/app/usb_comm/handler/: CMakeLists.txt  handler.h  handler_eink.c  handler_knob.c  handler_rgb.c  handler_version.c
config/cmake/: font_subset.cmake  lv_font_conv.cmake  ui_strings.cmake  ui_strings.py  version.cmake
config/drivers/: CMakeLists.txt  Kconfig
config/drivers/console/: CMakeLists.txt  Kconfig  Kconfig.uart_slip  uart_slip.c
config/drivers/display/: CMakeLists.txt  Kconfig  Kconfig.ssd16xx  Kconfig.sw_rotate  display_sw_rotate.c  ssd16xx.c
config/drivers/kscan/: kscan_gpio_74hc165.c
config/drivers/led_strip/: CMakeLists.txt  Kconfig  led_strip_remap.c
config/drivers/sensor/: CMakeLists.txt  Kconfig
config/drivers/sensor/knob/: CMakeLists.txt  Kconfig  knob.c  motor.c
config/drivers/sensor/knob/encoder/: CMakeLists.txt  encoder_as5047.c
config/drivers/sensor/knob/include/knob/: math.h
config/drivers/sensor/knob/include/knob/drivers/: encoder.h  inverter.h  knob.h  motor.h  profile.h
config/drivers/sensor/knob/inverter/: CMakeLists.txt  Kconfig  Kconfig.stm32  inverter_stm32.c
config/drivers/sensor/knob/lib/: CMakeLists.txt  encoder_state.c  knob.c  lpf.c  motor.c  pid.c
config/drivers/sensor/knob/lib/include/knob/: encoder_state.h  lpf.h  math.h  motor.h  pid.h  time.h
config/drivers/sensor/knob/profile/: CMakeLists.txt  damped.c  disable.c  encoder.c  inertia.c  ratchet.c  spin.c  spring.c  switch.c
config/dts/behaviors/: lvgl_key_press.dtsi  mouse_wheel.dtsi  sensor_rotate_mouse_wheel.dtsi
config/dts/bindings/: zmk,keymap-ext.yaml  zmk,uart-slip.yaml
config/proto/: CMakeLists.txt  Kconfig  uart_comm.proto  usb_comm.proto
(+104 files in other folders)
